bugfixed after refactoring and unit tests