@@ -118,6 +118,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.1</version>
+				<configuration>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -125,7 +128,7 @@
 				<version>3.0.0</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
-					<outputDirectory>D:\Programme\bukkitserver\spigot-1.15.2\plugins\</outputDirectory>
+					<outputDirectory>D:\Programme\bukkitserver\spigot-1.16.1\plugins\</outputDirectory>
 				</configuration>
 			</plugin>
 			<plugin>
